name:                rea-process
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/rea#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable rea-process
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                        , mongoDB == 2.3.0
                        , text == 1.2.2.1
                        , regex-tdfa == 1.2.2
                        , unix-time == 0.3.7
                        , bytestring >= 0.10.8.1
                        , aeson == 1.1.0.0
                        , utf8-string == 1.0.1.1
                        , HTTP == 4000.3.3
                        , streaming == 0.1.4.3
