name:                rea-process
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/rea#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable rea-process
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  other-modules:       DbStore
                       , Distance
                       , Geocoding
                       , GeocodingCache
                       , HttpsClient
                       , Parsing
                       , Poi
                       , Time

  build-depends:       base >= 4.7 && < 5
                        , mongoDB == 2.3.0.5
                        , text == 1.2.3.0
                        , regex-tdfa == 1.2.3
                        , unix-time == 0.3.8
                        , bytestring >= 0.10.8.1
                        , aeson == 1.3.0.0
                        , utf8-string == 1.0.1.1
                        , http-conduit == 2.3.0
                        , HTTP == 4000.3.11
                        , connection == 0.2.8
                        , http-client == 0.5.10
                        , http-client-tls == 0.3.5.3
                        , tls == 1.4.1
                        , data-default-class
                        , x509-system == 1.6.6
                        , streaming == 0.2.1.0
                        , gps == 1.2
                        , split == 0.2.3.3
                        , safe == 0.3.17
                        , time == 1.8.0.4
                        , spawn == 0.3
